# nft-tui

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: PLAN.md
src/nft_tui/: __init__.py  __main__.py  app.py
src/nft_tui/nft/: __init__.py  client.py  conntrack.py  models.py  parser.py
src/nft_tui/screens/: __init__.py  conntrack.py  help.py  main.py
src/nft_tui/styles/: app.tcss
src/nft_tui/utils/: __init__.py  backup.py  validators.py
src/nft_tui/widgets/: __init__.py  counters.py  dialogs.py  rule_editor.py  table_view.py  tree_view.py
tests/: __init__.py  test_models.py  test_parser.py  test_validators.py
